--- a/Ticketing System/index.html
+++ b/Ticketing System/index.html
@@ -112,31 +112,37 @@
                     </div>
                 </div>
             </div>
-            <!-- use sasu part end-->
-            <section class="popular_place padding_top">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4 col-sm-6">
-                            <div class="single_popular_place">
-                                <img src="img/icon/place_icon_1.png" alt="">
-                                <h4>Life of Egeft</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor</p>
-                                <a href="#" class="btn1">book now</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                             <div class="single_popular_place">
-                                <img src="img/icon/place_icon_2.png" alt="">
-                                <h4>Biking in Norway</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor</p>
-                                <a href="#" class="btn1">book now</a>
-                            </div>
-                        </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_donation_item">
+                        <img src="img/icon/train.png" alt="train">
+                        <h4>Station Details in Sri Lanka</h4>
+                        <p>Railway Station is listed on Tourbi Station Details Page .
+                            Find address, telephone and more details of Inquiries. </p>
+                        <a href="#" class="read_btn">read more</a>
                     </div>
-
                 </div>
-            </section>
-            <!-- use sasu part end-->
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_donation_item">
+                        <img src="img/icon/train.png" alt="#">
+                        <h4>Train Names in Sri Lanka</h4>
+                        <p>A list of named passenger trains in Sri Lanka
+                            on Tourbi Train Names Page.
+                            Find train names and train root line details.  </p>
+                        <a href="#" class="read_btn">read more</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_donation_item">
+                        <img src="img/icon/train.png" alt="#">
+                        <h4>Train tickets prices in Sri Lanka</h4>
+                        <p>Here you will find train tickets prices  from
+                            Colombo Fort to  all railway stations in Sri Lanka.
+                            Prices for 1st, 2nd and 3rd Classes. </p>
+                        <a href="#" class="read_btn">read more</a>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <img src="img/animate_icon/Shape-1.png" alt="" class="feature_icon_1">
@@ -156,13 +162,15 @@
                 <div class="col-lg-5">
                     <div class="feature_part_text">
                         <img src="img/section_tittle_img.png" alt="#">
-                        <h2>Amazing tour</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-                            ipsum suspendisse ultrices gravida Risus commodo viverra maecenas
-                            accumsan lacus vel facilisis. </p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt
-                            ut</span>
+                        <h2>Amazing Train Travelling</h2>
+                        <p>Sri Lanka train tours or train travel, while slower is more comfortable.
+                            The trains are the most cheapest, safe and enjoyable traveling method
+                            in Sri Lanka. From the Colombo Fort which is the central railway station
+                            travelers can take their trains to different destinations. You can take
+                            trains to most of the important places in the Sri Lanka. </p>
+                        <span>Sri Lanka Railways ( SLR ) functions under the General Manager of
+                            Railways (GMR). The General Manager reports to the Secretary of the
+                            Ministry of Transport.</span>
                         <div class="row">
                             <div class="col-sm-6 col-md-4">
                                 <div class="feature_part_text_iner">
@@ -191,13 +199,52 @@
             </div>
         </div>
 
-        <img src="img/animate_icon/Shape-1.png" alt="" class="feature_icon_1">
+
         <img src="img/animate_icon/Shape-2.png" alt="" class="feature_icon_2">
         <img src="img/animate_icon/Shape-3.png" alt="" class="feature_icon_3">
     </section>
     <!-- upcoming_event part start-->
 
-
+    <!-- use sasu part end-->
+    <section class="popular_place padding_top">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="section_tittle text-center">
+                        <img src="img/section_tittle_img.png" alt="">
+                        <h2>Most Popular <span>place</span> </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            sed  do eiusmod tempor incididunt ut</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_popular_place">
+                        <img src="img/icon/place_icon_1.png" alt="">
+                        <h4>Life of Egeft</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor</p>
+                        <a href="#" class="btn1">book now</a>
+                    </div>
+                </div><div class="col-lg-4 col-sm-6">
+                <div class="single_popular_place">
+                    <img src="img/icon/place_icon_2.png" alt="">
+                    <h4>Biking in Norway</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor</p>
+                    <a href="#" class="btn1">book now</a>
+                </div>
+            </div><div class="col-lg-4 col-sm-6">
+                <div class="single_popular_place">
+                    <img src="img/icon/place_icon_3.png" alt="">
+                    <h4>Tour of iceland</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor</p>
+                    <a href="#" class="btn1">book now</a>
+                </div>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- use sasu part end-->
 
     <!-- about_us part start-->
     <section class="place_details section_padding">
