bus schedule updated

--- a/Ticketing System/AdminHome.html
+++ b/Ticketing System/AdminHome.html
@@ -74,21 +74,21 @@
 </header>
 <!-- Header part end-->
 
-<!-- banner part start-->
-<section class="banner_part">
+<!-- breadcrumb start-->
+<section class="breadcrumb breadcrumb_bg">
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-7">
-                <div class="banner_text">
-                    <div class="banner_text_iner">
-                        <h5>Best way to travel</h5>
-                        <h1>Make your self comfy</h1>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="breadcrumb_iner text-center">
+                    <div class="breadcrumb_iner_item">
+                        <h2>Welcome to Tourbi</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<!-- breadcrumb start-->
 
 <!--::footer_part start::-->
 <footer class="footer_part">
