--- a/Ticketing System/For_Your_Editing.html
+++ b/Ticketing System/For_Your_Editing.html
@@ -44,7 +44,7 @@
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">about</a>
@@ -53,12 +53,15 @@
                                 <a class="nav-link" href="packages.html">packages</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
+                                <a class="nav-link dropdown-toggle" href="BusSchedule.html" id="navbarDropdown1"
                                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     pages
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                     <a class="dropdown-item" href="elements.html">Elements</a>
+                                    <a class="dropdown-item" href="CentralBusStops.html">Bus Stops</a>
+                                    <a class="dropdown-item" href="BusSchedule.html">Bus Schedule</a>
+                                    <a class="dropdown-item" href="BusTicketPrices.html">Ticket Prices</a>
                                 </div>
                             </li>
                             <li class="nav-item">
@@ -66,7 +69,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a class="btn_1 d-none d-lg-block" href="#">Login</a>
+                    <a class="btn_1 d-none d-lg-block" href="index.html">P.Vishali</a>
                 </nav>
             </div>
         </div>
@@ -106,11 +109,11 @@
         <div class="row">
             <div class="col-sm-6 col-lg-3">
                 <div class="single_footer_part">
-                    <h4>About Agency</h4>
-                    <p>The world has become so fast paced that people don’t want
-                        to stand by reading a page of information, they would much
-                        rather look at a presentation and understand the message.
-                        It has come to a point where images</p>
+                    <h4>About Tourbi</h4>
+                    <p align="justify">We are providing a solution for ticketing system for a public
+                        transport network, we are provides the public transport system for
+                        both local passengers and foreign passengers
+                        including public transport managers.</p>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-3">
@@ -118,12 +121,8 @@
                     <h4>Navigation Links</h4>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">team</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Packages</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -131,19 +130,13 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_footer_part">
                     <h4>Newsletter</h4>
-                    <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days
-                        open
+                    <p align="justify">Prime Minister Ranil Wickremesinghe deployed new luxury
+                        buses to SLTB today at Shalika Ground in Narahenpitiya.
                     </p>
                     <div id="mc_embed_signup">
                         <form target="_blank"
                               action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                               method="get" class="subscribe_form relative mail_part">
-                            <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                                   class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = ' Email Address '">
-                            <button type="submit" name="submit" id="newsletter-submit"
-                                    class="email_icon newsletter-submit button-contactForm"><i
-                                    class="far fa-paper-plane"></i></button>
                             <div class="mt-10 info"></div>
                         </form>
                     </div>
