--- a/Ticketing System/home.html
+++ b/Ticketing System/home.html
@@ -119,9 +119,9 @@
             <div class="col-lg-4 col-sm-6">
                 <div class="single_donation_item">
                     <img src="img/icon/bus.png" alt="train">
-                    <h4>Central Bus Stops in Sri Lanka</h4>
-                    <p>Central Bus Stops listed on Tourbi Central Bus Stops.
-                        Find Central Bus names and address details for Inquiries. </p>
+                    <h4>Central Bus Depots in Sri Lanka</h4>
+                    <p>Central Bus Depots listed on Tourbi Central Bus Depots.
+                        Find Central Bus Depots, Directions and address details. </p>
                     <a href="CentralBusStops.html" class="read_btn">read more</a>
                 </div>
             </div>
@@ -166,7 +166,7 @@
                 <div class="feature_part_text">
                     <img src="img/section_tittle_img.png" alt="#">
                     <h2>Amazing Bus Travelling</h2>
-                    <p align="justify">Sri Lanka bus tours or bus travel, while slower is more comfortable.
+                    <p align="justify">Sri Lanka bus travel, while slower is more comfortable.
                         The buses are the most cheapest, safe and enjoyable traveling method
                         in Sri Lanka. From the Pettah which is the central bus station
                         travelers can take their buses to different destinations. You can take
@@ -246,7 +246,7 @@
         </div>
     </div>
     <div class="view_all_btn">
-        <a href="#" class="view_btn">view all</a>
+        <a href="about.html" class="view_btn">view all</a>
     </div>
 </section>
 <!-- about_us part end-->
