--- a/Ticketing System/contact.html
+++ b/Ticketing System/contact.html
@@ -36,15 +36,15 @@
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
 
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">about</a>
@@ -53,22 +53,15 @@
                                     <a class="nav-link" href="packages.html">packages</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Blog
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="blog.html"> blog</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="BusSchedule.html" id="navbarDropdown1"
+                                       role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         pages
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                         <a class="dropdown-item" href="elements.html">Elements</a>
+                                        <a class="dropdown-item" href="CentralBusStops.html">Bus Stops</a>
+                                        <a class="dropdown-item" href="BusSchedule.html">Bus Schedule</a>
+                                        <a class="dropdown-item" href="BusTicketPrices.html">Ticket Prices</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
@@ -76,7 +69,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn_1 d-none d-lg-block" href="#">Hot Line 052</a>
+                        <a class="btn_1 d-none d-lg-block" href="index.html">P.Vishali</a>
                     </nav>
                 </div>
             </div>
@@ -104,45 +97,9 @@
   <section class="contact-section padding_top">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
-        <div id="map" style="height: 480px;"></div>
-        <script>
-          function initMap() {
-            var uluru = {
-              lat: -25.363,
-              lng: 131.044
-            };
-            var grayStyles = [{
-                featureType: "all",
-                stylers: [{
-                    saturation: -90
-                  },
-                  {
-                    lightness: 50
-                  }
-                ]
-              },
-              {
-                elementType: 'labels.text.fill',
-                stylers: [{
-                  color: '#ccdee9'
-                }]
-              }
-            ];
-            var map = new google.maps.Map(document.getElementById('map'), {
-              center: {
-                lat: -31.197,
-                lng: 150.744
-              },
-              zoom: 9,
-              styles: grayStyles,
-              scrollwheel: false
-            });
-          }
-        </script>
-        <script
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap">
-        </script>
-
+         <section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d63375.746640104386!2d79.87495!3d6.892497!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9d90a07be0b1c86e!2sSri%20Lanka%20Transport%20Board%20Head%20Office!5e0!3m2!1sen!2sus!4v1569385825035!5m2!1sen!2sus" width="1150" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </section>
       </div>
 
 
@@ -190,21 +147,23 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>Buttonwood, California.</h3>
-              <p>Rosemead, CA 91770</p>
+              <h3>Sri Lanka Transport Board</h3>
+              <p>Head Office, No.200 <br/>
+                  Kirula Road, Colombo 5<br/>
+                  Sri Lanka.</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3>00 (440) 9865 562</h3>
-              <p>Mon to Fri 9am to 6pm</p>
+              <h3>  +94 112 581 120</h3>
+              <p>Mon to Fri 9am to 4pm</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3>support@colorlib.com</h3>
+              <h3> info@sltb.lk</h3>
               <p>Send us your query anytime!</p>
             </div>
           </div>
@@ -214,97 +173,87 @@
   </section>
   <!-- ================ contact section end ================= -->
 
-  <!--::footer_part start::-->
-  <footer class="footer_part">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-lg-3">
-                <div class="single_footer_part">
-                    <h4>About Agency</h4>
-                    <p>The world has become so fast paced that people don’t want 
-                    to stand by reading a page of information, they would much 
-                    rather look at a presentation and understand the message. 
-                    It has come to a point where images</p>
+    <!--::footer_part start::-->
+    <footer class="footer_part">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="single_footer_part">
+                        <h4>About Tourbi</h4>
+                        <p align="justify">We are providing a solution for ticketing system for a public
+                            transport network, we are provides the public transport system for
+                            both local passengers and foreign passengers
+                            including public transport managers.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6 col-lg-3">
-                <div class="single_footer_part">
-                    <h4>Navigation Links</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">team</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+                <div class="col-sm-6 col-lg-3">
+                    <div class="single_footer_part">
+                        <h4>Navigation Links</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Packages</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6 col-lg-3">
-                <div class="single_footer_part">
-                    <h4>Newsletter</h4>
-                    <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days
-                        open
-                    </p>
-                    <div id="mc_embed_signup">
-                        <form target="_blank"
-                            action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                            method="get" class="subscribe_form relative mail_part">
-                            <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                                class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
-                                onblur="this.placeholder = ' Email Address '">
-                            <button type="submit" name="submit" id="newsletter-submit"
-                                class="email_icon newsletter-submit button-contactForm"><i
-                                    class="far fa-paper-plane"></i></button>
-                            <div class="mt-10 info"></div>
-                        </form>
+                <div class="col-sm-6 col-lg-3">
+                    <div class="single_footer_part">
+                        <h4>Newsletter</h4>
+                        <p align="justify">Prime Minister Ranil Wickremesinghe deployed new luxury
+                            buses to SLTB today at Shalika Ground in Narahenpitiya.
+                        </p>
+                        <div id="mc_embed_signup">
+                            <form target="_blank"
+                                  action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                                  method="get" class="subscribe_form relative mail_part">
+                                <div class="mt-10 info"></div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                    <div class="single_footer_part">
+                        <h4>Instafeed</h4>
+                        <div class="footer_img">
+                            <a href="#"><img src="img/footer_img/footer_1.png" alt=""></a>
+                            <a href="#"><img src="img/footer_img/footer_2.png" alt=""></a>
+                            <a href="#"><img src="img/footer_img/footer_3.png" alt=""></a>
+                            <a href="#"><img src="img/footer_img/footer_4.png" alt=""></a>
+                            <a href="#"><img src="img/footer_img/footer_5.png" alt=""></a>
+                            <a href="#"><img src="img/footer_img/footer_6.png" alt=""></a>
+                            <a href="#"><img src="img/footer_img/footer_7.png" alt=""></a>
+                            <a href="#"><img src="img/footer_img/footer_8.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-lg-3">
-                <div class="single_footer_part">
-                    <h4>Instafeed</h4>
-                    <div class="footer_img">
-                        <a href="#"><img src="img/footer_img/footer_1.png" alt=""></a>
-                        <a href="#"><img src="img/footer_img/footer_2.png" alt=""></a>
-                        <a href="#"><img src="img/footer_img/footer_3.png" alt=""></a>
-                        <a href="#"><img src="img/footer_img/footer_4.png" alt=""></a>
-                        <a href="#"><img src="img/footer_img/footer_5.png" alt=""></a>
-                        <a href="#"><img src="img/footer_img/footer_6.png" alt=""></a>
-                        <a href="#"><img src="img/footer_img/footer_7.png" alt=""></a>
-                        <a href="#"><img src="img/footer_img/footer_8.png" alt=""></a>
+            <hr>
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="copyright_text">
+                        <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="footer_icon social_icon">
+                        <ul class="list-unstyled">
+                            <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
+                            <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="copyright_text">
-                    <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="footer_icon social_icon">
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                        <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <img src="img/overlay_2.png" alt="#" class="footer_overlay">
-</footer>
-<!--::footer_part end::-->
+        <img src="img/overlay_2.png" alt="#" class="footer_overlay">
+    </footer>
+    <!--::footer_part end::-->
 
-<!-- jquery plugins here-->
+    <!-- jquery plugins here-->
 <!-- jquery -->
 <script src="js/jquery-1.12.1.min.js"></script>
 <!-- popper js -->
