--- a/Ticketing System/index.html
+++ b/Ticketing System/index.html
@@ -116,9 +116,9 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_donation_item">
                         <img src="img/icon/bus.png" alt="train">
-                        <h4>Central Bus Stops in Sri Lanka</h4>
-                        <p>Central Bus Stops listed on Tourbi Central Bus Stops.
-                            Find Central Bus names and address details for Inquiries. </p>
+                        <h4>Central Bus Depots in Sri Lanka</h4>
+                        <p>Central Bus Depots listed on Tourbi Central Bus Depots.
+                            Find Central Bus Depots, Directions and address details. </p>
                         <a href="CentralBusStops.html" class="read_btn">read more</a>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
             </div>
         </div>
         <div class="view_all_btn">
-            <a href="#" class="view_btn">view all</a>
+            <a href="about.html" class="view_btn">view all</a>
         </div>
     </section>
     <!-- about_us part end-->
