--- a/Ticketing System/packages.html
+++ b/Ticketing System/packages.html
@@ -36,15 +36,15 @@
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_icon"><i class="fas fa-bars"></i></span>
                         </button>
 
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">about</a>
@@ -53,22 +53,15 @@
                                     <a class="nav-link" href="packages.html">packages</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Blog
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="blog.html"> blog</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="BusSchedule.html" id="navbarDropdown1"
+                                       role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         pages
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                         <a class="dropdown-item" href="elements.html">Elements</a>
+                                        <a class="dropdown-item" href="CentralBusStops.html">Bus Stops</a>
+                                        <a class="dropdown-item" href="BusSchedule.html">Bus Schedule</a>
+                                        <a class="dropdown-item" href="BusTicketPrices.html">Ticket Prices</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
@@ -76,7 +69,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn_1 d-none d-lg-block" href="#">Hot Line 052</a>
+                        <a class="btn_1 d-none d-lg-block" href="index.html">P.Vishali</a>
                     </nav>
                 </div>
             </div>
@@ -101,134 +94,67 @@
     <!-- breadcrumb start-->
 
     <!-- pricing part start-->
-    <section class="tour_package padding_top single_pack">
+    <section class="tour_package section_padding">
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-6">
                     <div class="tour_package_cotent owl-carousel">
                         <div class="single_tour_package">
-                            <img src="img/tour_plan_1.png" alt="">
+                            <img src="img/package_4.png" alt="">
                             <div class="tour_pack_content">
-                                <h4>Sawpalo, Brasil</h4>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipi
-                                    elit sed do eiusmod tempor incididunt</p>
+                                <h4>Premium Package</h4>
+                                <p> 5000.00 RS<br/>
+                                    valid for 24 months </p>
                                 <div class="tour_content_rating">
-                                    <ul>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                    </ul>
-                                    <a href="#" class="btn1">join now</a>
+                                    <a href="#" class="btn1">Buy</a>
                                 </div>
                             </div>
                         </div>
                         <div class="single_tour_package">
-                            <img src="img/tour_plan_2.png" alt="">
+                            <img src="img/package_2.png" alt="">
                             <div class="tour_pack_content">
-                                <h4>Sawpalo, Brasil</h4>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipi
-                                    elit sed do eiusmod tempor incididunt</p>
+                                <h4>Plus Package</h4>
+                                <p><br/> 3000.00 RS<br/>
+                                    valid for 12 months </p>
                                 <div class="tour_content_rating">
-                                    <ul>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                    </ul>
-                                    <a href="#" class="btn1">join now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_tour_package">
-                            <img src="img/tour_plan_1.png" alt="">
-                            <div class="tour_pack_content">
-                                <h4>Sawpalo, Brasil</h4>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipi
-                                    elit sed do eiusmod tempor incididunt</p>
-                                <div class="tour_content_rating">
-                                    <ul>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                    </ul>
-                                    <a href="#" class="btn1">join now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_tour_package">
-                            <img src="img/tour_plan_2.png" alt="">
-                            <div class="tour_pack_content">
-                                <h4>Sawpalo, Brasil</h4>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipi
-                                    elit sed do eiusmod tempor incididunt</p>
-                                <div class="tour_content_rating">
-                                    <ul>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                        <li><a href="#"><i class="fas fa-star"></i></a></li>
-                                    </ul>
-                                    <a href="#" class="btn1">join now</a>
+                                    <a href="#" class="btn1">Buy</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5 col-xl-3 offset-lg-1 col-sm-6">
-                    <div class="tour_pack_content">
-                        <img src="img/section_tittle_img.png" alt="">
-                        <h2>tour package</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit 
-                        sed  do eiusmod tempor incididunt ut</p>
-                        <a href="#" class="btn_1">join now</a>
+                <div class="col-lg-6 col-sm-6">
+                    <div class="tour_package_cotent owl-carousel">
+                        <div class="single_tour_package">
+                            <img src="img/package_1.png" alt="">
+                            <div class="tour_pack_content">
+                                <h4>Standard Package</h4>
+                                <p> 1500.00 RS<br/>
+                                    valid for 6 months </p>
+                                <div class="tour_content_rating">
+                                    <a href="#" class="btn1">Buy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="single_tour_package">
+                            <img src="img/package_3.png" alt="">
+                            <div class="tour_pack_content">
+                                <h4>Childern's Package</h4>
+                                <p> 1000.00 RS<br/>
+                                    valid for 12 months </p>
+                                <div class="tour_content_rating">
+                                    <a href="#" class="btn1">Buy</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!-- pricing part end-->
 
-     <!-- about_us part start-->
-     <section class="place_details section_padding margin_bottom">
-        <div class="container-fluid">
-            <div class="row justify-content-between">
-                <div class="col-md-6 col-lg-6">
-                    <div class="place_detauls_text">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8 col-xl-6">
-                                <div class="place_details_content">
-                                    <img src="img/section_tittle_img.png" alt="#">
-                                    <h2>Amazing tour</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
-                                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-                                        ipsum suspendisse ultrices gravida Risus commodo viverra maecenas
-                                        accumsan lacus vel facilisis. </p>
-                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt
-                                    ut</span>
-                                </div>
-                            </div>
-                        </div>
-                        <img src="img/plase_details_1.png" alt="#">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="place_details_img">
-                        <img src="img/plase_details_2.png" alt="#">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="view_all_btn">
-            <a href="#" class="view_btn">view all</a>
-        </div>
-    </section>
-    <!-- about_us part end-->
 
     <!-- cta part start-->
     <section class="cta_part section_padding">
@@ -236,16 +162,13 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-8 col-xl-7">
                     <div class="cta_text text-center">
-                        <h5>Join Our Newsletter</h5>
-                        <h2>Subscribe to get Updated
-                                with new offers</h2>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Enter email address" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
-                                <div class="input-group-append" id="button-addon4">
-                                    <a href="#" class="subs_btn">subscribe now</a>
-                                </div>
-                            </div>
-                        </div>
+                        <h5>Join Our Tourbi</h5>
+                        <h2>Buy our
+                            <br/>Tourbi Token packages
+                            <br/> Enjoy your daily bus travelling!!
+                            <br/>
+                            <img src="img/logo.png" alt="">
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -253,17 +176,17 @@
     </section>
     <!-- cta part end-->
 
-	<!--::footer_part start::-->
+    <!--::footer_part start::-->
     <footer class="footer_part">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-lg-3">
                     <div class="single_footer_part">
-                        <h4>About Agency</h4>
-                        <p>The world has become so fast paced that people don’t want 
-                        to stand by reading a page of information, they would much 
-                        rather look at a presentation and understand the message. 
-                        It has come to a point where images</p>
+                        <h4>About Tourbi</h4>
+                        <p align="justify">We are providing a solution for ticketing system for a public
+                            transport network, we are provides the public transport system for
+                            both local passengers and foreign passengers
+                            including public transport managers.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-3">
@@ -271,12 +194,8 @@
                         <h4>Navigation Links</h4>
                         <ul class="list-unstyled">
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">team</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Packages</a></li>
+                            <li><a href="#">About</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
@@ -284,19 +203,13 @@
                 <div class="col-sm-6 col-lg-3">
                     <div class="single_footer_part">
                         <h4>Newsletter</h4>
-                        <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days
-                            open
+                        <p align="justify">Prime Minister Ranil Wickremesinghe deployed new luxury
+                            buses to SLTB today at Shalika Ground in Narahenpitiya.
                         </p>
                         <div id="mc_embed_signup">
                             <form target="_blank"
-                                action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                method="get" class="subscribe_form relative mail_part">
-                                <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                                    class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
-                                    onblur="this.placeholder = ' Email Address '">
-                                <button type="submit" name="submit" id="newsletter-submit"
-                                    class="email_icon newsletter-submit button-contactForm"><i
-                                        class="far fa-paper-plane"></i></button>
+                                  action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                                  method="get" class="subscribe_form relative mail_part">
                                 <div class="mt-10 info"></div>
                             </form>
                         </div>
@@ -323,8 +236,8 @@
                 <div class="col-lg-8">
                     <div class="copyright_text">
                         <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
                     </div>
                 </div>
                 <div class="col-lg-4">
